--- a/calculator.html
+++ b/calculator.html
@@ -17,7 +17,10 @@
         <h1>Calculator App</h1>
         <form>
             <p><input type="text" id="screen"> </p>
+
         </form>
+        <table>
+        </table>
     </body>
 </center>
 </html>
