--- a/calculator.html
+++ b/calculator.html
@@ -21,7 +21,7 @@
                 <button type="button" class="btn btn-info active" onclick="inverse()">1/x</button>
                 <button type="button" class="btn btn-info active" onclick="square()">x<sup>2</sup></button>
                 <button type="button" class="btn btn-info active" onclick="squareRoot()">&#8730;x</button>
-                <button type="button" class="btn btn-info active" onclick="cosineRadian()">cos radian</button>
+                <button type="button" class="btn btn-info active" onclick="cosRadian()">cos radian</button>
             </p>
             <p>
                 <button type="button" class="btn btn-info active" onclick="allClear()">AC</button>
@@ -50,7 +50,7 @@
                 <button type="button" class="btn btn-info active" onclick="addDigit('2')">2</button>
                 <button type="button" class="btn btn-info active" onclick="addDigit('3')">3</button>
                 <button type="button" class="btn btn-info active" onclick="storeOperator('+')">+</button>
-                <button type="button" class="btn btn-info active" onclick="tangentRadian()">tan radian</button>
+                <button type="button" class="btn btn-info active" onclick="tanRadian()">tan radian</button>
             </p>
             <p>
                 <button type="button" class="btn btn-info active" onclick="addDigit('0')">0</button>
