--- a/calculator.html
+++ b/calculator.html
@@ -12,54 +12,50 @@
     <script src="calculator.js"></script>
 </head>
 <center>
-
     <body id="body">
         <h1>Calculator App</h1>
-        <form>
             <p><input type="text" id="screen"> </p>
-            <p>
+            <table>
                 <button type="button" class="btn btn-info active" onclick="inverse()">1/x</button>
                 <button type="button" class="btn btn-info active" onclick="square()">x<sup>2</sup></button>
                 <button type="button" class="btn btn-info active" onclick="squareRoot()">&#8730;x</button>
                 <button type="button" class="btn btn-info active" onclick="cosRadian()">cos radian</button>
-            </p>
-            <p>
+        </table>
+            <table>
                 <button type="button" class="btn btn-info active" onclick="allClear()">AC</button>
                 <button type="button" class="btn btn-info active" onclick="clears()">C</button>
                 <button type="button" class="btn btn-info active" onclick="changeSign()">+/-</button>
                 <button type="button" class="btn btn-info active" onclick="percentage()">%</button>
                 <button type="button" class="btn btn-info active" onclick="acos()">cos inverse</button>
-            </p>
-            <p>
-
+        </table>
+          <table>
                 <button type="button" class="btn btn-info active" onclick="addDigit('7')">7</button>
                 <button type="button" class="btn btn-info active" onclick="addDigit('8')">8</button>
                 <button type="button" class="btn btn-info active" onclick="addDigit('9')">9</button>
                 <button type="button" class="btn btn-info active" onclick="storeOperator('*')">x</button>
                 <button type="button" class="btn btn-info active" onclick="sinRadian()">sin radian</button>
-            </p>
-            <p>
+            </table>
+            <table>
                 <button type="button" class="btn btn-info active" onclick="addDigit('4')">4</button>
                 <button type="button" class="btn btn-info active" onclick="addDigit('5')">5</button>
                 <button type="button" class="btn btn-info active" onclick="addDigit('6')">6</button>
                 <button type="button" class="btn btn-info active" onclick="storeOperator('-')">-</button>
                 <button type="button" class="btn btn-info active" onclick="asin()">sin inverse</button>
-            </p>
-            <p>
+            </table>
+            <table>
                 <button type="button" class="btn btn-info active" onclick="addDigit('1')">1</button>
                 <button type="button" class="btn btn-info active" onclick="addDigit('2')">2</button>
                 <button type="button" class="btn btn-info active" onclick="addDigit('3')">3</button>
                 <button type="button" class="btn btn-info active" onclick="storeOperator('+')">+</button>
                 <button type="button" class="btn btn-info active" onclick="tanRadian()">tan radian</button>
-            </p>
-            <p>
+            </table>
+            <table>
                 <button type="button" class="btn btn-info active" onclick="addDigit('0')">0</button>
                 <button type="button" class="btn btn-info active" onclick="addDecimal()">.</button>
                 <button type="button" class="btn btn-info active" onclick="calculate()">=</button>
                 <button type="button" class="btn btn-info active" onclick="storeOperator('/')">/</button>
                 <button type="button" class="btn btn-info active" onclick="atan()">tan inverse</button>
-            </p>
-        </form>
+            </table>
     </body>
 </center>
 
