--- a/calculator.html
+++ b/calculator.html
@@ -15,6 +15,7 @@
     <body id="body">
         <h1>Calculator App</h1>
             <p><input type="text" id="screen"> </p>
+        <form>
             <table>
                 <button type="button" class="btn btn-info active" onclick="inverse()">1/x</button>
                 <button type="button" class="btn btn-info active" onclick="square()">x<sup>2</sup></button>
@@ -56,7 +57,7 @@
                 <button type="button" class="btn btn-info active" onclick="storeOperator('/')">/</button>
                 <button type="button" class="btn btn-info active" onclick="atan()">tan inverse</button>
             </table>
+        </form>
     </body>
 </center>
-
 </html>
