--- a/calculator.html
+++ b/calculator.html
@@ -19,7 +19,7 @@
         <form>
             <table>
                 <button type="button" class="btn btn-info active" onclick="inverse()">1/x</button>
-                <button type="button" class="btn btn-info active" onclick="square()">x<sup>2</sup></button>
+                <button type="button" class="btn btn-info active" onclick="square()">x^2</button>
                 <button type="button" class="btn btn-info active" onclick="squareRoot()">&#8730;x</button>
                 <button type="button" class="btn btn-info active" onclick="cosRadian()">cos radian</button>
             </table>
