--- a/calculator.html
+++ b/calculator.html
@@ -34,28 +34,28 @@
                 <button type="button" class="btn btn-info active" onclick="addDigit('7')">7</button>
                 <button type="button" class="btn btn-info active" onclick="addDigit('8')">8</button>
                 <button type="button" class="btn btn-info active" onclick="addDigit('9')">9</button>
-                <button type="button" class="btn btn-info active" onclick="storeOperator('*')">x</button>
+                <button type="button" class="btn btn-info active" onclick="storeOperator('1')">x</button>
                 <button type="button" class="btn btn-info active" onclick="sinRadian()">sin radian</button>
             </table>
             <table>
                 <button type="button" class="btn btn-info active" onclick="addDigit('4')">4</button>
                 <button type="button" class="btn btn-info active" onclick="addDigit('5')">5</button>
                 <button type="button" class="btn btn-info active" onclick="addDigit('6')">6</button>
-                <button type="button" class="btn btn-info active" onclick="storeOperator('-')">-</button>
+                <button type="button" class="btn btn-info active" onclick="storeOperator('4')">-</button>
                 <button type="button" class="btn btn-info active" onclick="asin()">sin inverse</button>
             </table>
             <table>
                 <button type="button" class="btn btn-info active" onclick="addDigit('1')">1</button>
                 <button type="button" class="btn btn-info active" onclick="addDigit('2')">2</button>
                 <button type="button" class="btn btn-info active" onclick="addDigit('3')">3</button>
-                <button type="button" class="btn btn-info active" onclick="storeOperator('+')">+</button>
+                <button type="button" class="btn btn-info active" onclick="storeOperator('3')">+</button>
                 <button type="button" class="btn btn-info active" onclick="tanRadian()">tan radian</button>
             </table>
             <table>
                 <button type="button" class="btn btn-info active" onclick="addDigit('0')">0</button>
                 <button type="button" class="btn btn-info active" onclick="addDecimal()">.</button>
                 <button type="button" class="btn btn-info active" onclick="calculate()">=</button>
-                <button type="button" class="btn btn-info active" onclick="storeOperator('/')">/</button>
+                <button type="button" class="btn btn-info active" onclick="storeOperator('2')">/</button>
                 <button type="button" class="btn btn-info active" onclick="atan()">tan inverse</button>
             </table>
         </form>
@@ -63,4 +63,3 @@
 </center>
 
 </html>
-// All written by Nicole Stein
